--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>h1 {size: 30px; font-weight: bold;}</style>
 </head>
 <body>
     <h1>Bolond Játék</h1>
     <div id="tabla"></div>
-
-
     <script src="alap.js"></script>
 </body>
 </html>
