--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>h1 {size: 30px; font-weight: bold;}</style>
+    <style>h1 {size: 30px; font-weight: bold;  text-decoration: italic;}</style>
 </head>
 <body>
     <h1>Bolond Játék</h1>
